test/asm/endsection.err
error: endsection.asm(4):
    Cannot output data outside of a SECTION
error: Assembly aborted (1 error)!
